[package]
name = "wu-diff"
version = "0.1.1"
authors = ["bokuweb <bokuweb12@gmail.com>"]
repository = "https://github.com/bokuweb/wu-diff-rs"
keywords = ["diff", "lcs"]
license = "MIT"
readme = "README.md"
description = "Compute differences between two slices using wu(the O(NP)) algorithm."

[dependencies]
clippy = { version = "0.0.209", optional = true }

[dev-dependencies]
criterion = "0.2"
base64 = "0.9.0"
image = "0.18.0"

[[bench]]
name = "benches"
harness = false
