[package]
name = "wu-diff"
version = "0.1.2"
authors = ["bokuweb <bokuweb12@gmail.com>"]
repository = "https://github.com/bokuweb/wu-diff-rs"
keywords = ["diff", "lcs"]
license = "MIT"
readme = "README.md"
description = "Compute differences between two slices using wu(the O(NP)) algorithm."

[dependencies]
clippy = { version = "0.0.302", optional = true }

[dev-dependencies]
criterion = "0.5"
base64 = "0.21"
image = "0.24.0"

[[bench]]
name = "benches"
harness = false
